# likelike

./: .gitignore  Cargo.toml  LICENSE.mit  README.md  justfile  sqlx-data.json
.github/workflows/: build.yml
bins/likelike-consume/: Cargo.toml
bins/likelike-consume/src/: main.rs
migrations/: 0001-initial.sql  0002-add-meta-and-html-src.sql  0003-add-hidden.sql
src/: domain.rs  enrichment.rs  lib.rs  main.rs  processors.rs  server.rs  stores.rs
src/processors/: html.rs  http.rs  pdf.rs  txt.rs
src/stores/: external.rs  memory.rs  sqlite.rs
