[package]
name = "likelike-consume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
likelike = { path = "../../", version = "0.1.0" }
eyre = "0.6.8"
clap = { version = "4.0.26", features = ["wrap_help"] }
tokio = { version = "1.21.2", features = ["macros", "net", "fs", "rt"] }
futures = "0.3.25"
